Fixed spacing of last updated time component

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -54,3 +54,8 @@ right now we are only overriding the main theme color to match the logo, dark an
 .light {
   --color-fd-primary: hsl(260, 100%, 67%);
 }
+
+.last-updated {
+  margin-bottom: 1.1rem;
+  margin-top: 0.3rem;
+}
